--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Sonu Kumar",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "mongoose": "^5.11.17",
     "primeicons": "^4.1.0",
     "primereact": "^6.0.2"
