--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "mongoose": "^5.11.17",
     "primeicons": "^4.1.0",
     "primereact": "^6.0.2"
